--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/pint": "^1.0",
         "larastan/larastan": "^2.0",
         "orchestra/testbench": "^9.4",
-        "pestphp/pest": "^3.0"
+        "pestphp/pest": "^3.0",
+        "rector/rector": "^1.2"
     },
     "extra": {
         "laravel": {
@@ -42,7 +43,11 @@
         "check": [
             "@php vendor/bin/pint",
             "@php vendor/bin/phpstan analyse",
+            "@rector",
             "@test"
+        ],
+        "rector": [
+            "vendor/bin/rector"
         ],
         "test": [
             "./vendor/bin/pest"
