Add sqlite database

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -53,5 +53,10 @@ jobs:
       - name: List Installed Dependencies
         run: composer show -D
 
+      - name: Create SQLite database file
+        run: |
+          mkdir -p vendor/orchestra/testbench-core/laravel/database
+          touch vendor/orchestra/testbench-core/laravel/database/database.sqlite
+
       - name: Execute tests
         run: vendor/bin/pest --ci
