--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^8.3",
-        "illuminate/contracts": "^10.0||^11.0"
+        "illuminate/contracts": "^11.0",
+        "illuminate/support": "^11.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
